--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<!-- Orchard CSS -->
+	<link href="orchard.css" rel="stylesheet">
+	<!-- Fonts from Google -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
 	<!-- Who needs a title anyway? -->
 	<title>Orchard FED test</title>
   </head>
@@ -20,86 +26,120 @@
 			<!-- Article 1 -->
 			<article class="row">
 				<!-- Column 1 -->
-				<div class="col-4"></div>
+				<div class="col-12 col-md-4">
+					<a href="#">
+						<img srcset="img/Image-01@2x.jpg 2x, img/Image-01.jpg 1x" 
+							src="img/Image-01.jpg" alt="" class="img-fluid">
+					</a>
+				</div>
 
 				<!-- Column 2 -->
-				<div class="col-4 row">
+				<div class="col-12 col-md-4 row">
 					<div class="col-12">
-
+						<a href="#">
+							<img srcset="img/Image-02@2x.jpg 2x, img/Image-02.jpg 1x" 
+								src="img/Image-02.jpg" alt="" class="img-fluid">
+						</a>
 					</div>
 					<div class="col-12">
-
+						<a href="#">
+							<img srcset="img/Image-06@2x.jpg 2x, img/Image-06.jpg 1x" 
+								src="img/Image-06.jpg" alt="" class="img-fluid">
+						</a>
 					</div>
 				</div>
 
 				<!-- Column 3 -->
-				<div class="col-4">
+				<div class="col-12 col-md-4 order-1">
 					<!-- Section header -->
-					<header class="col-12"></header>
-					<p></p>
+					<header class="col-12"><h3>Answer Your Body's Needs</h3></header>
+					
+					<p>The way ingredients are sourced affects the way we nourish our bodies. 
+					Author Mark Schatzer believes our body naturally devolops an appetite for 
+					the foods and nutrients it needs to be healthy, but that artificial flavourings 
+					are getting in the way. This can be reversed by focusing on high-quality 
+					ingredients and being mindful as your appetite guides you to consume according 
+					to your body's needs.</p>
 
 					<!-- Section subheader -->
-					<header class="aeg-red"></header>
-					<p><strong></strong></p>
+					<header>
+						<h5 class="be-mindful">Be Mindful</h5>
+					</header>
+					<p><strong>Sourcing local or organic food is a good way to start being more 
+					mindful about what you're cooking and eating.</strong></p>
 				</div>
 			</article>
 
 		</section>
 
 		<!-- Section 2 -->
-		<section class="row">
+		<section class="row" id="latest">
 			<!-- Section header -->
-			<header class="col-12 align-self-center"></header>
+			<header class="col-12 align-self-center">
+				<h2 class="text-center">All the Latest From AEG</h2>
+			</header>
 
 			<!-- Article 1 -->
-			<article class="col-4">
+			<article class="col-12 col-md-4">
 				<!-- Article image -->
 				<figure>
-					<img alt="">
+					<img srcset="img/Image-05@2x.jpg 2x, img/Image-05.jpg 1x" 
+						src="img/Image-05.jpg" alt="" class="img-fluid">
 				</figure>
 
 				<!-- Article header -->
-				<header></header>
+				<header>
+					<h4>Summer Lunch Menu By Mark Best</h4>
+				</header>
 
 				<!-- Article body -->
-				<p></p>
+				<p class="article-p">AEG ambassador Mark Best's summer eats are guaranteed to help you make the 
+				most of the warmer weather and entertaining at home.</p>
 
 				<!-- Article CTA -->
-				<button></button>
+				<button>Read More</button>
 			</article>
 
 			<!-- Article 2 -->
-			<article class="col-4">
+			<article class="col-12 col-md-4">
 				<!-- Article image -->
 				<figure>
-					<img>
+					<img srcset="img/Image-04@2x.jpg 2x, img/Image-04.jpg 1x" 
+						src="img/Image-04.jpg" alt="" class="img-fluid">
 				</figure>
 
 				<!-- Article header -->
-				<header></header>
+				<header>
+					<h4>A Traditional Christmas Eve, Mark Best Style</h4>
+				</header>
 
 				<!-- Article body -->
-				<p></p>
+				<p class="article-p">One of Australia's best chefs and AEG ambassador, Mark Best, shares his favourite 
+				Christmas Eve menu which is sure to impress your guests.</p>
 
 				<!-- Article CTA -->
-				<button></button>
+				<button>Read More</button>
 			</article>
 
 			<!-- Article 3 -->
-			<article class="col-4">
+			<article class="col-12 col-md-4">
 				<!-- Article image -->
 				<figure>
-					<img>
+					<img srcset="img/Image-03@2x.jpg 2x, img/Image-03.jpg 1x" 
+						src="img/Image-03.jpg" alt="" class="img-fluid">
 				</figure>
 
 				<!-- Article header -->
-				<header></header>
+				<header>
+					<h4>Taking Taste Further</h4>
+				</header>
 
 				<!-- Article body -->
-				<p></p>
+				<p class="article-p">This exclusive cookbook gives you all the know-how you need. We've designed it to 
+				make sure you get the most out of our products &en; and the best out of your food.</p>
 
 				<!-- Article CTA -->
-				<button></button>
+				<button>Read More</button>
 			</article>
 
 		</section>
