--- a/index.html
+++ b/index.html
@@ -24,33 +24,11 @@
 		<!-- Section 1 -->
 		<section>
 			<!-- Article 1 -->
-			<article class="row">
-				<!-- Column 1 -->
-				<div class="col-12 col-md-4">
-					<a href="#">
-						<img srcset="img/Image-01@2x.jpg 2x, img/Image-01.jpg 1x" 
-							src="img/Image-01.jpg" alt="" class="img-fluid">
-					</a>
-				</div>
-
-				<!-- Column 2 -->
-				<div class="col-12 col-md-4 row">
-					<div class="col-12">
-						<a href="#">
-							<img srcset="img/Image-02@2x.jpg 2x, img/Image-02.jpg 1x" 
-								src="img/Image-02.jpg" alt="" class="img-fluid">
-						</a>
-					</div>
-					<div class="col-12">
-						<a href="#">
-							<img srcset="img/Image-06@2x.jpg 2x, img/Image-06.jpg 1x" 
-								src="img/Image-06.jpg" alt="" class="img-fluid">
-						</a>
-					</div>
-				</div>
+			<!-- Control the flexbox direction in reverse to restack on shrink -->
+			<article class="row d-flex flex-row-reverse">
 
 				<!-- Column 3 -->
-				<div class="col-12 col-md-4 order-1">
+				<div class="col-12 col-md-4">
 					<!-- Section header -->
 					<header class="col-12"><h3>Answer Your Body's Needs</h3></header>
 					
@@ -68,6 +46,31 @@
 					<p><strong>Sourcing local or organic food is a good way to start being more 
 					mindful about what you're cooking and eating.</strong></p>
 				</div>
+
+				<!-- Column 2 -->
+				<div class="col-12 col-md-4 row">
+					<div class="col-12 align-self-start">
+						<a href="#" class="top-link d-inline-flex">
+							<img srcset="img/Image-02@2x.jpg 2x, img/Image-02.jpg 1x" 
+								src="img/Image-02.jpg" alt="" class="img-fluid">
+						</a>
+					</div>
+					<div class="col-12 align-self-end">
+						<a href="#" class="top-link d-inline-flex">
+							<img srcset="img/Image-06@2x.jpg 2x, img/Image-06.jpg 1x" 
+								src="img/Image-06.jpg" alt="" class="img-fluid">
+						</a>
+					</div>
+				</div>
+
+				<!-- Column 1 -->
+				<div class="col-12 col-md-4">
+					<a href="#" class="top-link d-inline-flex">
+						<img srcset="img/Image-01@2x.jpg 2x, img/Image-01.jpg 1x" 
+							src="img/Image-01.jpg" alt="" class="img-fluid">
+					</a>
+				</div>
+				
 			</article>
 
 		</section>
@@ -97,7 +100,7 @@
 				most of the warmer weather and entertaining at home.</p>
 
 				<!-- Article CTA -->
-				<button>Read More</button>
+				<button type="button" class="btn btn-link cta">Read More</button>
 			</article>
 
 			<!-- Article 2 -->
@@ -118,7 +121,7 @@
 				Christmas Eve menu which is sure to impress your guests.</p>
 
 				<!-- Article CTA -->
-				<button>Read More</button>
+				<button type="button" class="btn btn-link cta">Read More</button>
 			</article>
 
 			<!-- Article 3 -->
@@ -139,7 +142,7 @@
 				make sure you get the most out of our products &en; and the best out of your food.</p>
 
 				<!-- Article CTA -->
-				<button>Read More</button>
+				<button type="button" class="btn btn-link cta">Read More</button>
 			</article>
 
 		</section>
@@ -147,6 +150,7 @@
 
 	<!-- Bootstrap w/ Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	<script src="orchard.js" type="text/javascript"></script>
 
   </body>
 </html>
