Added basic modal functionality.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,27 @@
 				most of the warmer weather and entertaining at home.</p>
 
 				<!-- Article CTA -->
-				<button type="button" class="btn btn-link cta">Read More</button>
+				<button type="button" class="btn btn-link cta" data-bs-toggle="modal" data-bs-target="#article-1-modal">Read More</button>
+
+				<!-- Modal -->
+				<div class="modal fade" id="article-1-modal" tabindex="-1" aria-labelledby="article-1-modal-label" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="article-1-modal-label">Summer Lunch Menu By Mark Best</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								<figure class="text-center">
+									<img srcset="img/Image-05@2x.jpg 2x, img/Image-05.jpg 1x" 
+										src="img/Image-05.jpg" alt="" class="img-fluid">
+								</figure>
+								<p>AEG ambassador Mark Best's summer eats are guaranteed to help you make the 
+									most of the warmer weather and entertaining at home.</p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</article>
 
 			<!-- Article 2 -->
@@ -121,7 +141,27 @@
 				Christmas Eve menu which is sure to impress your guests.</p>
 
 				<!-- Article CTA -->
-				<button type="button" class="btn btn-link cta">Read More</button>
+				<button type="button" class="btn btn-link cta" data-bs-toggle="modal" data-bs-target="#article-2-modal">Read More</button>
+
+				<!-- Modal -->
+				<div class="modal fade" id="article-2-modal" tabindex="-1" aria-labelledby="article-2-modal-label" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="article-2-modal-label">A Traditional Christmas Eve, Mark Best Style</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								<figure class="text-center">
+									<img srcset="img/Image-04@2x.jpg 2x, img/Image-04.jpg 1x" 
+										src="img/Image-04.jpg" alt="" class="img-fluid">
+								</figure>
+								<p>One of Australia's best chefs and AEG ambassador, Mark Best, shares his favourite 
+									Christmas Eve menu which is sure to impress your guests.</p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</article>
 
 			<!-- Article 3 -->
@@ -142,7 +182,27 @@
 				make sure you get the most out of our products &en; and the best out of your food.</p>
 
 				<!-- Article CTA -->
-				<button type="button" class="btn btn-link cta">Read More</button>
+				<button type="button" class="btn btn-link cta" data-bs-toggle="modal" data-bs-target="#article-3-modal">Read More</button>
+
+				<!-- Modal -->
+				<div class="modal fade" id="article-3-modal" tabindex="-1" aria-labelledby="article-3-modal-label" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="article-3-modal-label">Taking Taste Further</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								<figure class="text-center">
+									<img srcset="img/Image-03@2x.jpg 2x, img/Image-03.jpg 1x" 
+										src="img/Image-03.jpg" alt="" class="img-fluid">
+								</figure>
+								<p>This exclusive cookbook gives you all the know-how you need. We've designed it to 
+								make sure you get the most out of our products &en; and the best out of your food.</p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</article>
 
 		</section>
