--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!-- Fonts from Google -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&amp;display=swap" rel="stylesheet">
 	<!-- Who needs a title anyway? -->
 	<title>Orchard FED test</title>
   </head>
@@ -28,7 +28,7 @@
 			<article class="row d-flex flex-row-reverse">
 
 				<!-- Column 3 -->
-				<div class="col-12 col-md-4">
+				<div class="col-12 col-md-12 col-xl-4">
 					<!-- Section header -->
 					<header class="col-12"><h3>Answer Your Body's Needs</h3></header>
 					
@@ -48,26 +48,26 @@
 				</div>
 
 				<!-- Column 2 -->
-				<div class="col-12 col-md-4 row">
-					<div class="col-12 align-self-start">
+				<div class="col-12 col-md-6 col-xl-4 d-flex flex-column justify-content-between">
+					<div class="col-12">
 						<a href="#" class="top-link d-inline-flex">
 							<img srcset="img/Image-02@2x.jpg 2x, img/Image-02.jpg 1x" 
-								src="img/Image-02.jpg" alt="" class="img-fluid">
+								src="img/Image-02.jpg" alt="" class="img-fluid w-100">
 						</a>
 					</div>
-					<div class="col-12 align-self-end">
+					<div class="col-12">
 						<a href="#" class="top-link d-inline-flex">
 							<img srcset="img/Image-06@2x.jpg 2x, img/Image-06.jpg 1x" 
-								src="img/Image-06.jpg" alt="" class="img-fluid">
+								src="img/Image-06.jpg" alt="" class="img-fluid w-100">
 						</a>
 					</div>
 				</div>
 
 				<!-- Column 1 -->
-				<div class="col-12 col-md-4">
+				<div class="col-12 col-md-6 col-xl-4">
 					<a href="#" class="top-link d-inline-flex">
 						<img srcset="img/Image-01@2x.jpg 2x, img/Image-01.jpg 1x" 
-							src="img/Image-01.jpg" alt="" class="img-fluid">
+							src="img/Image-01.jpg" alt="" class="img-fluid w-100">
 					</a>
 				</div>
 				
@@ -79,11 +79,11 @@
 		<section class="row" id="latest">
 			<!-- Section header -->
 			<header class="col-12 align-self-center">
-				<h2 class="text-center">All the Latest From AEG</h2>
+				<h2 class="text-md-center">All the Latest From AEG</h2>
 			</header>
 
 			<!-- Article 1 -->
-			<article class="col-12 col-md-4">
+			<article class="col-12 col-md-4 pb-4">
 				<!-- Article image -->
 				<figure>
 					<img srcset="img/Image-05@2x.jpg 2x, img/Image-05.jpg 1x" 
@@ -124,7 +124,7 @@
 			</article>
 
 			<!-- Article 2 -->
-			<article class="col-12 col-md-4">
+			<article class="col-12 col-md-4 pb-4">
 				<!-- Article image -->
 				<figure>
 					<img srcset="img/Image-04@2x.jpg 2x, img/Image-04.jpg 1x" 
@@ -165,7 +165,7 @@
 			</article>
 
 			<!-- Article 3 -->
-			<article class="col-12 col-md-4">
+			<article class="col-12 col-md-4 pb-4">
 				<!-- Article image -->
 				<figure>
 					<img srcset="img/Image-03@2x.jpg 2x, img/Image-03.jpg 1x" 
@@ -179,7 +179,7 @@
 
 				<!-- Article body -->
 				<p class="article-p">This exclusive cookbook gives you all the know-how you need. We've designed it to 
-				make sure you get the most out of our products &en; and the best out of your food.</p>
+				make sure you get the most out of our products &amp;en; and the best out of your food.</p>
 
 				<!-- Article CTA -->
 				<button type="button" class="btn btn-link cta" data-bs-toggle="modal" data-bs-target="#article-3-modal">Read More</button>
@@ -198,7 +198,7 @@
 										src="img/Image-03.jpg" alt="" class="img-fluid">
 								</figure>
 								<p>This exclusive cookbook gives you all the know-how you need. We've designed it to 
-								make sure you get the most out of our products &en; and the best out of your food.</p>
+								make sure you get the most out of our products &amp;en; and the best out of your food.</p>
 							</div>
 						</div>
 					</div>
@@ -210,7 +210,7 @@
 
 	<!-- Bootstrap w/ Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-	<script src="orchard.js" type="text/javascript"></script>
+	<script src="orchard.js"></script>
 
   </body>
 </html>
