--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 				<!-- Column 2 -->
 				<div class="col-12 col-md-6 col-xl-4 d-flex flex-column justify-content-between">
 					<div class="col-12">
-						<a href="#" class="top-link d-inline-flex">
+						<a href="#" class="top-link d-inline-flex animate">
 							<img srcset="img/Image-02@2x.jpg 2x, img/Image-02.jpg 1x" 
 								src="img/Image-02.jpg" alt="" class="img-fluid w-100">
 						</a>
 					</div>
 					<div class="col-12">
-						<a href="#" class="top-link d-inline-flex">
+						<a href="#" class="top-link d-inline-flex animate">
 							<img srcset="img/Image-06@2x.jpg 2x, img/Image-06.jpg 1x" 
 								src="img/Image-06.jpg" alt="" class="img-fluid w-100">
 						</a>
@@ -65,7 +65,7 @@
 
 				<!-- Column 1 -->
 				<div class="col-12 col-md-6 col-xl-4">
-					<a href="#" class="top-link d-inline-flex">
+					<a href="#" class="top-link d-inline-flex animate">
 						<img srcset="img/Image-01@2x.jpg 2x, img/Image-01.jpg 1x" 
 							src="img/Image-01.jpg" alt="" class="img-fluid w-100">
 					</a>
