Tidying up front end

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&amp;display=swap" rel="stylesheet">
+	<!-- Bootstrap icons -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 	<!-- Who needs a title anyway? -->
 	<title>Orchard FED test</title>
   </head>
   <body>
 
 	<!-- Outer wrapper -->
-	<div class="container">
+	<div class="container container-outer">
 
 		<!-- Section 1 -->
 		<section>
@@ -50,13 +52,13 @@
 				<!-- Column 2 -->
 				<div class="col-12 col-md-6 col-xl-4 d-flex flex-column justify-content-between">
 					<div class="col-12">
-						<a href="#" class="top-link d-inline-flex animate">
+						<a href="page-2.html" class="top-link d-inline-flex animate">
 							<img srcset="img/Image-02@2x.jpg 2x, img/Image-02.jpg 1x" 
 								src="img/Image-02.jpg" alt="" class="img-fluid w-100">
 						</a>
 					</div>
 					<div class="col-12">
-						<a href="#" class="top-link d-inline-flex animate">
+						<a href="page-3.html" class="top-link d-inline-flex animate">
 							<img srcset="img/Image-06@2x.jpg 2x, img/Image-06.jpg 1x" 
 								src="img/Image-06.jpg" alt="" class="img-fluid w-100">
 						</a>
@@ -65,7 +67,7 @@
 
 				<!-- Column 1 -->
 				<div class="col-12 col-md-6 col-xl-4">
-					<a href="#" class="top-link d-inline-flex animate">
+					<a href="page-1.html" class="top-link d-inline-flex animate">
 						<img srcset="img/Image-01@2x.jpg 2x, img/Image-01.jpg 1x" 
 							src="img/Image-01.jpg" alt="" class="img-fluid w-100">
 					</a>
@@ -108,7 +110,7 @@
 						<div class="modal-content">
 							<div class="modal-header">
 								<h5 class="modal-title" id="article-1-modal-label">Summer Lunch Menu By Mark Best</h5>
-								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+								<button type="button" class="close-button" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x-circle text-white"></i></button>
 							</div>
 							<div class="modal-body">
 								<figure class="text-center">
@@ -149,7 +151,7 @@
 						<div class="modal-content">
 							<div class="modal-header">
 								<h5 class="modal-title" id="article-2-modal-label">A Traditional Christmas Eve, Mark Best Style</h5>
-								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+								<button type="button" class="close-button" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x-circle text-white"></i></button>
 							</div>
 							<div class="modal-body">
 								<figure class="text-center">
@@ -179,7 +181,7 @@
 
 				<!-- Article body -->
 				<p class="article-p">This exclusive cookbook gives you all the know-how you need. We've designed it to 
-				make sure you get the most out of our products &amp;en; and the best out of your food.</p>
+				make sure you get the most out of our products &ndash; and the best out of your food.</p>
 
 				<!-- Article CTA -->
 				<button type="button" class="btn btn-link cta" data-bs-toggle="modal" data-bs-target="#article-3-modal">Read More</button>
@@ -190,7 +192,7 @@
 						<div class="modal-content">
 							<div class="modal-header">
 								<h5 class="modal-title" id="article-3-modal-label">Taking Taste Further</h5>
-								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+								<button type="button" class="close-button" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x-circle text-white"></i></button>
 							</div>
 							<div class="modal-body">
 								<figure class="text-center">
@@ -198,7 +200,7 @@
 										src="img/Image-03.jpg" alt="" class="img-fluid">
 								</figure>
 								<p>This exclusive cookbook gives you all the know-how you need. We've designed it to 
-								make sure you get the most out of our products &amp;en; and the best out of your food.</p>
+								make sure you get the most out of our products &ndash; and the best out of your food.</p>
 							</div>
 						</div>
 					</div>
