--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&amp;display=swap" rel="stylesheet">
-	<!-- Bootstrap icons -->
+	<!-- Bootstrap Icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+	<!-- Bootstrap Lightbox -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<!-- Who needs a title anyway? -->
 	<title>Orchard FED test</title>
   </head>
@@ -58,7 +60,7 @@
 						</a>
 					</div>
 					<div class="col-12">
-						<a href="page-3.html" class="top-link d-inline-flex animate">
+						<a href="img/Image-06.jpg" class="top-link d-inline-flex animate" data-toggle="lightbox">
 							<img srcset="img/Image-06@2x.jpg 2x, img/Image-06.jpg 1x" 
 								src="img/Image-06.jpg" alt="" class="img-fluid w-100">
 						</a>
@@ -210,8 +212,13 @@
 		</section>
 	</div>
 
+	<!-- AngularJS-->
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 	<!-- Bootstrap w/ Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	<!-- Bootstrap Lightbox -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<!-- App logic -->
 	<script src="orchard.js"></script>
 
   </body>
